--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vinvocci",
   "description": "Simple JSON logger",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "author": "Anatol Sommer <anatol@anatol.at>",
   "repository": {
@@ -15,6 +15,12 @@
   "dependencies": {
   },
   "devDependencies": {
-    "mocha": "~2.1.0"
+    "mocha": "~2.1.0",
+    "jshint": "^2.9.1"
+  },
+  "scripts": {
+    "jshint": "jshint --show-non-errors lib/* && echo 'No errors!\n' ; set $?=0",
+    "test": "mocha --check-leaks test/test.js",
+    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha test/test.js"
   }
 }
